objects/Reviewmasterconsol__c/Reviewmasterconsol__c.object-meta.xml
<CustomObject>
    <label>Review master consol</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Review ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review master consol</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>