objects/Reviewmasterconsol__c/fields/masterconsol__c.field-meta.xml
<CustomField>
    <fullName>masterconsol__c</fullName>
    <label>Master Consol</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Review Master Consol</relationshipLabel>
    <relationshipName>Reviewmasterconsol</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>