objects/Reviewmasterconsol__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>UserRegistration__c</referenceTo>
    <relationshipLabel>Review master consol</relationshipLabel>
    <relationshipName>Review_master_consol</relationshipName>
    <type>Lookup</type>
</CustomField>