objects/Reviewmasterconsol__c/fields/Vote_Score__c.field-meta.xml
<CustomField>
    <fullName>Vote_Score__c</fullName>
    <label>Vote Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>