objects/Reviewmasterconsol__c/validationRules/Valid_value_of_Vote_Score.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_value_of_Vote_Score</fullName>
    <active>true</active>
    <errorConditionFormula>Vote_Score__c =0 ||  Vote_Score__c &gt;5</errorConditionFormula>
    <errorDisplayField>Vote_Score__c</errorDisplayField>
    <errorMessage>You need to input from 1 to 5</errorMessage>
</ValidationRule>