objects/Reviewmasterconsol__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>masterconsol__c</columns>
    <columns>Review__c</columns>
    <columns>Vote_Score__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>